# topn-telegram

./: .gitignore  BUGS-AND-IMPROVEMENTS-README.md  Dockerfile  README.md  SYSTEM-ISSUES-AUDIT.md  main.py  pyproject.toml  renovate.json  requirements.txt
.cursor/rules/: project-context.md
.github/: dependabot.yml
.github/workflows/: prod_deploy.yaml  stg_deploy.yaml  test.yaml
bot/: fsm.py  keyboards.py  keyboards_inline.py  responses.py
bot/handlers/: admin.py  districts.py  monitoring.py
clients/: topn_db_client.py
core/: config.py
prod/: docker-compose.yml
repositories/: monitoring.py
services/: monitoring.py  notifier.py  validator.py
stg/: docker-compose.yml
tests/bot/: test_fsm.py  test_keyboards_inline.py
tests/bot/handlers/: test_admin.py  test_districts.py
tests/repositories/: test_monitoring_repository.py
tests/service/: test_monitoring_service.py
tests/services/: test_notifier.py  test_validator.py
tests/tools/: test_url_parser.py
tools/: url_parser.py
